Switch to Node.js server for better Railway compatibility

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "hk-aed-waittime",
   "version": "1.0.0",
   "description": "香港急症室等候時間顯示系統 - Real-time Hong Kong A&E waiting time display system",
-  "main": "index.html",
+  "main": "server.js",
   "scripts": {
-    "start": "python -m http.server 8080",
-    "dev": "python -m http.server 8000"
+    "start": "node server.js",
+    "dev": "node server.js"
   },
   "keywords": [
     "hong-kong",
@@ -15,6 +15,9 @@
     "healthcare"
   ],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=18.x"
+  }
 }
 
