--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "description": "香港急症室實時等候時間 - 18間醫院即時數據",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0a0a0f",
-  "theme_color": "#0a0a0f",
+  "background_color": "#f8fafc",
+  "theme_color": "#667eea",
   "orientation": "portrait-primary",
   "icons": [
     {
